Version 0.9.4

# Book Keeping App

Features:
* Adds new setting for disabling strict totalStock check.
  - The new check box in setting allows users to loosen the check on the stocks
  - Let them just use the app for recording the transactions only. 
  - CP wont be correct and will depend upon latest transaction regardless of the old stock.
  - It will give less accurate profit picture but will enable use of app without much investment of counting existing items